Ensure buttons are full aligned in course list

--- a/assets/blocks/course-list-block/course-list.scss
+++ b/assets/blocks/course-list-block/course-list.scss
@@ -123,16 +123,6 @@ $block: '.wp-block-sensei-lms-course-list';
 			}
 		}
 	}
-
-	@media ( min-width: 782px ) {
-		&--is-list-view {
-			.wp-block-sensei-lms-button-take-course,
-			.wp-block-sensei-lms-button-continue-course,
-			.wp-block-sensei-lms-button-view-results {
-				text-align: right;
-			}
-		}
-	}
 }
 
 /* Divi overrides */
